--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.8.3
   intl: ^0.20.2
   path_provider: ^2.1.1
+  file_picker: ^5.3.3
 
 dev_dependencies:
   flutter_test:
